After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786938 - Emoji picker wrongly opens when clicking on primary icon too
Emoji picker wrongly opens when clicking on primary icon too
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkEntry
3.22.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2017-08-28 19:23 UTC by Daniel Boles
Modified: 2017-08-28 19:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Entry: Only open emoji picker on 2ndary icon click (872 bytes, patch)
2017-08-28 19:30 UTC, Daniel Boles
committed Details | Review

Description Daniel Boles 2017-08-28 19:23:11 UTC
The handler doesn't check which icon was pressed; it should only bring up the emoji picker if it was its icon, the secondary one.
Comment 1 Daniel Boles 2017-08-28 19:30:30 UTC
Created attachment 358625 [details] [review]
Entry: Only open emoji picker on 2ndary icon click
Comment 2 Daniel Boles 2017-08-28 19:53:06 UTC
Attachment 358625 [details] pushed as 477fc95 - Entry: Only open emoji picker on 2ndary icon click